module(name = "ecsact_rt_entt_test")

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")
bazel_dep(name = "rules_ecsact", version = "0.5.6")
bazel_dep(name = "ecsact_lang_cpp", version = "0.4.6")
bazel_dep(name = "ecsact_runtime", version = "0.6.7")
bazel_dep(name = "boost.mp11", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.dll", version = "1.83.0.bzl.2")
bazel_dep(name = "entt", version = "3.12.2")
bazel_dep(name = "ecsact_cli", version = "0.3.16")
bazel_dep(name = "boost.process", version = "1.83.0.bzl.2")

bazel_dep(name = "toolchains_llvm", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "a14ad3a64e7bf398ab48105aaa0348e032ac87f8",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

# TODO: https://github.com/bazelbuild/bazel-central-registry/pull/1916
git_override(
    module_name = "libarchive",
    commit = "7c331f92acea5243c195cdc6fb46ecfa11ce1ce2",
    remote = "https://github.com/zaucy/libarchive.git",
)

bazel_dep(name = "ecsact_rt_entt")
bazel_dep(name = "xxhash", version = "0.8.2")

local_path_override(
    module_name = "ecsact_rt_entt",
    path = "..",
)

register_toolchains("@ecsact_cli//:all")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(llvm_version = "17.0.6")
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

ecsact = use_extension("@rules_ecsact//ecsact:extensions.bzl", "ecsact", dev_dependency = True)
ecsact.toolchain(use_ecsact_cli = True)
use_repo(ecsact, "ecsact_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    "@ecsact_toolchain//:all",
    dev_dependency = True,
)

local_path_override(
    module_name = "ecsact_runtime",
    path = "../../ecsact_runtime",
)

local_path_override(
    module_name = "ecsact_interpret",
    path = "../../ecsact_interpret",
)

local_path_override(
    module_name = "ecsact_parse",
    path = "../../ecsact_parse",
)
