load("@ecsact_runtime//reference/async_reference/test:index.bzl", "ecsact_reference_async_module_test")
load("//bazel:copts.bzl", "copts")
load("//runtime:index.bzl", "ecsact_entt_runtime")

ecsact_entt_runtime(
    name = "async_test_core_module_runtime",
    srcs = ["@ecsact_runtime//reference/async_reference/test:async_test.ecsact"],
    ECSACT_ENTT_RUNTIME_PACKAGE = "::async_test::package",
    ECSACT_ENTT_RUNTIME_USER_HEADER = "async_test.ecsact.meta.hh",
    system_impls = ["dynamic"],
)

ecsact_reference_async_module_test(
    name = "async_module_test",
    copts = copts,
    deps = [":async_test_core_module_runtime"],
)
