load("@rules_cc//cc:defs.bzl", "cc_test")
load("//bazel:copts.bzl", "copts")
load("//runtime:index.bzl", "ecsact_entt_runtime")
load("@rules_ecsact//ecsact:defs.bzl", "ecsact_codegen")

ecsact_codegen(
    name = "ecsact_cc_system_impl_srcs",
    srcs = ["runtime_test.ecsact"],
    plugins = [
        "@ecsact//codegen_plugins:cpp_systems_source",
    ],
)

ecsact_entt_runtime(
    name = "runtime",
    srcs = ["runtime_test.ecsact"],
    ECSACT_ENTT_RUNTIME_PACKAGE = "::runtime_test::package",
    ECSACT_ENTT_RUNTIME_USER_HEADER = "runtime_test.ecsact.meta.hh",
    system_impls = [
        # "static",
        "dynamic",
    ],
)

cc_test(
    name = "test",
    srcs = [
        "runtime_test.cc",
        ":ecsact_cc_system_impl_srcs",
    ],
    copts = copts,
    deps = [
        ":runtime",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
