load("@ecsact_rt_entt//bazel:copts.bzl", "copts")
load("@ecsact_rt_entt//runtime:index.bzl", "ecsact_entt_runtime")
load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_ecsact//ecsact:defs.bzl", "ecsact_codegen")

ecsact_codegen(
    name = "ecsact_cc_system_impl_srcs",
    srcs = ["assoc_test.ecsact"],
    output_directory = "generated",
    plugins = [
        "@ecsact_lang_cpp//cpp_systems_source_codegen",
    ],
)

ecsact_entt_runtime(
    name = "runtime",
    srcs = ["assoc_test.ecsact"],
    ECSACT_ENTT_RUNTIME_PACKAGE = "::assoc_test::package",
    ECSACT_ENTT_RUNTIME_USER_HEADER = "assoc_test.ecsact.meta.hh",
    system_impls = ["dynamic"],
)

cc_test(
    name = "test",
    srcs = [
        "assoc_test.cc",
        ":ecsact_cc_system_impl_srcs",
    ],
    args = ["--gtest_catch_exceptions=0"],
    copts = copts,
    deps = [
        ":runtime",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
